Fix formatting inconsistencies in 2025 wrapped post

--- a/_posts/blog/2025-12-19-2025-wrapped.md
+++ b/_posts/blog/2025-12-19-2025-wrapped.md
@@ -44,7 +44,7 @@ Then for the remainder of the year, I was at home working remotely for a startup
 Here are my raw and somewhat naive goals for 2025 that I wrote in apple notes. For goals that are habits, I track them in a Google sheet. So if that goal has a corresponding entry in my habit tracker, then I won't comment on it. You can check the appendix to see it.
 
 - Meditation
-- Move your neck and head while seated and stretch your lower back  
+- Move your neck and head while seated and stretch your lower back
   > didn't ever really do this consciously. Sometimes when it came to my mind that I was sitting at my desk for too long, I started stretching my neck, but otherwise it wasn't really consistent. And the most intentional way that I could do this is by planning my day a priori so that I have to take a break between deep work sessions
 - Morning and evening schedules
   > this was a fail: I did it only when I was motivated to, not with discipline
@@ -86,12 +86,12 @@ Here are my raw and somewhat naive goals for 2025 that I wrote in apple notes. F
   - move to SF with a job in AI at SSI Inc or YC
     > was not realized
   - appear on the Dwarkesh podcast
-    > these was naive, but I will still remain as unrealistically ambitious
+    > this was naive, but I will still remain as unrealistically ambitious
 
 
 Hits
-- Started this blog with weekly victories, which are a compelling way to track progress and also focus on the wins.
-- Visited 6 countries.
+- Started this blog with weekly victories, which are a compelling way to track progress and also focus on the wins
+- Visited 6 countries
   - Portugal
   - Iceland
   - Canada
@@ -100,31 +100,33 @@ Hits
   - US
 
 Misses
-- I wasn't consistent.
-- Health wasn't always my priority (three all-nighters I think).
-- My language isn't confident/affirmative enough.
+- I wasn't consistent
+- Health wasn't always my priority (three all-nighters I think)
+- My language isn't confident/affirmative enough
 
 Side Quests
-- Made a maximum low-effort schedule for the last sem of university which let me focus on outside projects.
+- Made a maximum low-effort schedule for the last sem of university which let me focus on outside projects
 
 Thoughts
-- I want to do some pretty insane trips over 2026, I saw this guy on Strava do the entire northwest of France, 80 kilometers a day, and that seems pretty compelling to me.
-- I want to do more programs like FR8 and found.
-- Social media/internet is responsible for my lowest moments of the year.
-- I will languish in the absence of people to engage with.
-- On the topic of consistency, I've gone through many cycles of having incredible conviction in an idea which may have been born from ChatGPT or my own reflection, but then slowly losing conviction and realizing it's not the right fit/giving, I think getting a co-founder is a possible solution.
+- I want to do some pretty insane trips over 2026, I saw this guy on Strava do the entire northwest of France, 80 kilometers a day, and that seems pretty compelling to me
+- I want to do more programs like FR8 and found
+- Social media/internet is responsible for my lowest moments of the year
+- I will languish in the absence of people to engage with
+- On the topic of consistency, I've gone through many cycles of having incredible conviction in an idea which may have been born from ChatGPT or my own reflection, but then slowly losing conviction and realizing it's not the right fit/giving, I think getting a co-founder is a possible solution
 
 Picturing myself one year from now
-- Ironman/ultramarathoner.
-- In a startup or having travelled a lot of the world.
-- Made some positive impact which people know me for already.
+- Ironman/ultramarathoner
+- In a startup or having travelled a lot of the world
+- Made some positive impact which people know me for already
 
 At the end of 2026, what would disappoint you to still be true about your life?
-- Being in a meandering state where I'm not committed to anything, and I am still in exploring mode. Even though I am searching right now, doing that the entire year will not be good.
+- Being in a meandering state where I'm not committed to anything, and I am still in exploring mode. Even though I am searching right now, doing that the entire year will not be good
+
 If one area of your life stayed stagnant all year, which would be most dangerous?
-- Not doing everything in my power to find something which I can obsess over.
+- Not doing everything in my power to find something which I can obsess over
+
 Do you want 2026 to optimize more for optionality or commitment?
-- If I find something to obsess over, then I want to optimize for commitment, but if not, then I want to optimize for optionality because I have always wanted to travel the world and see places.
+- If I find something to obsess over, then I want to optimize for commitment, but if not, then I want to optimize for optionality because I have always wanted to travel the world and see places
 
 
 Next year will be the biggest so far!
