--- a/_posts/blog/2025-12-19-2025-wrapped.md
+++ b/_posts/blog/2025-12-19-2025-wrapped.md
@@ -88,7 +88,6 @@ Here are my raw and somewhat naive goals for 2025 that I wrote in apple notes. F
   - appear on the Dwarkesh podcast
     > this was naive, but I will still remain as unrealistically ambitious
 
-
 Hits
 - Started this blog with weekly victories, which are a compelling way to track progress and also focus on the wins
 - Visited 6 countries
@@ -106,6 +105,7 @@ Misses
 
 Side Quests
 - Made a maximum low-effort schedule for the last sem of university which let me focus on outside projects
+- Lots of software sidequests e.g. twtr cli
 
 Thoughts
 - I want to do some pretty insane trips over 2026, I saw this guy on Strava do the entire northwest of France, 80 kilometers a day, and that seems pretty compelling to me
@@ -117,7 +117,7 @@ Thoughts
 Picturing myself one year from now
 - Ironman/ultramarathoner
 - In a startup or having travelled a lot of the world
-- Made some positive impact which people know me for already
+- Made positive impact through a medium people know me for
 
 At the end of 2026, what would disappoint you to still be true about your life?
 - Being in a meandering state where I'm not committed to anything, and I am still in exploring mode. Even though I am searching right now, doing that the entire year will not be good
