Format year sections with headings and standardize goals punctuation/capitalization

--- a/_posts/blog/2025-12-19-2025-wrapped.md
+++ b/_posts/blog/2025-12-19-2025-wrapped.md
@@ -31,62 +31,72 @@ And in order of how satisfied I am with each part:
 
 5. Figuring it out
 
-Let's explain each part succinctly. The first stage of the year was finishing my bachelor of computer science at the University of Alberta and my classes ended at the beginning of April, but I had exams later in the month. In fact I only had one exam which was just a history written exam. The other two courses that I took in computer science were research courses, so there was no exam. And in my English course we just had a final project. For the first week of January, I was in Portugal with my family on a trip, and that was such an amazing trip.
+### 1. University (Jan-Apr)
+
+The first stage of the year was finishing my bachelor of computer science at the University of Alberta. My classes ended at the beginning of April, but I had exams later in the month. In fact I only had one exam which was just a history written exam. The other two courses that I took in computer science were research courses, so there was no exam. And in my English course we just had a final project. For the first week of January, I was in Portugal with my family on a trip, and that was such an amazing trip.
+
+### 2. Figuring it out (Apr-May)
 
 Then in stage two, which is to say April to May, I was figuring it out, so to speak, which is to say not doing much and kind of feeling like shit because university was my entire life for the past four years up to that point; I had the option to do a full-ride masters in Darmstadt that I declined that summer. But yeah, at that time I was just really unsure of what I wanted and pretty depressed. You can see in the appendix that from March 29th to May 25th, I did not track any habits. It's also worth mentioning that I injured myself in the knee in February (IT Band Syndrome) and was not running until May, which affected me very negatively. The godforsaken trip to Vancouver also happened in this time.
 
+### 3. FR8 Summer (Jun-Sep)
+
 Of course, FR8 was the highlight of the year because I was in an environment where everywhere you looked it was insanely talented, high ambition, and social; I am very happy when I interact with others, which is what FR8 allowed me to do. I did a mini-reflection on FR8 [here](./2025-10-18-experience.md), but I hope to reflect on it further in the future.
+
+### 4. Fun September (Sep)
 
 Fun September started off on September 1st with a trip to Estonia with my sister where we met Jan and that was amazing, even though I was sick at that time and drinking water like a maniac. Then I was in Ottawa for 10 days for my cousin's wedding and reconnected with some friends there and biked a lot like I did the summer prior and then from the 15th to the 23rd I was back in Edmonton where I hanged out with some friends, did a nice 150 bike ride with my friend Dev, and prepared for my bike trip through the Rockies, which was from the 24th to the 29th. That was the highlight of the year because it was insanely difficult and brutal, but I survived. I also went to another wedding, which this time was in Edmonton with one of our family friends, and that was amazing. It was actually the day of the 150-kilometer bike ride, so I ate a horse.
 
+### 5. At Home (Sep-Dec)
+
 Then for the remainder of the year, I was at home working remotely for a startup and that was a big mistake. I literally knew that working remotely would not be ideal, but I still accepted the job even though I had other options. The good news is that come January, I'll be leaving (I'm editing this in SF). On the bright side, during this period of time I spent time with family and we went to many different gatherings for Thanksgiving, Christmas, etc. I also spent a lot of time with my uncle since we went on daily walks for the better part of September to November.
 
-Here are my raw and somewhat naive goals for 2025 that I wrote in apple notes. For goals that are habits, I track them in a Google sheet. So if that goal has a corresponding entry in my habit tracker, then I won't comment on it. You can check the appendix to see it.
+Here are my goals for 2025 that I wrote in apple notes. For goals that are habits, I track them in a Google sheet. So if that goal has a corresponding entry in my habit tracker, then I won't comment on it. You can check the appendix to see it.
 
 - Meditation
 - Move your neck and head while seated and stretch your lower back
-  > didn't ever really do this consciously. Sometimes when it came to my mind that I was sitting at my desk for too long, I started stretching my neck, but otherwise it wasn't really consistent. And the most intentional way that I could do this is by planning my day a priori so that I have to take a break between deep work sessions
+  > Didn't ever really do this consciously. Sometimes when it came to my mind that I was sitting at my desk for too long, I started stretching my neck, but otherwise it wasn't really consistent. And the most intentional way that I could do this is by planning my day a priori so that I have to take a break between deep work sessions.
 - Morning and evening schedules
-  > this was a fail: I did it only when I was motivated to, not with discipline
+  > This was a fail: I did it only when I was motivated to, not with discipline.
 - Deep work
-  > ditto schedules
+  > Ditto schedules.
 - Express gratitude
 - Maintain good posture with a straight gaze
-  > ditto move neck
+  > Ditto move neck.
 - Stop drinking water before sleep
   > The intent was to prevent myself from waking up to go pee in the middle of the night. And I did this with varying like levels of success. Sometimes in the evening I'd be thirsty and I'd say, well, screw it, I'm gonna go drink water because I'm thirsty, but on the whole having this in mind definitely improved my sleep.
 - Sleep from 9:00 p.m. to 5:00 a.m.
   > My sleep was overall great 2025; it wasn't perfect. Furthermore, in Finland near the summer solstice, there's no chance of falling asleep at 9 p.m. because of the sun. So it's more of a seasonal variation where in the winter I can easily sleep at 8 pm, but in the summer I can't. So I don't think there should be a specific time frame to sleep. It should just be sleep early and sleep for eight hours. And for most of the year I got that done.
 - Keep your smartphone always stored far from the desk
-  > Sucess: while at FR8 I rarely brought my phone to my desk and at home I leave it in the mudroom
+  > Success: while at FR8 I rarely brought my phone to my desk and at home I leave it in the mudroom.
 - Enter monk mode every time you put your phone away
-  > yeah, this was unrealistic
+  > Yeah, this was unrealistic.
 - No YouTube (only for educational purposes while taking notes like Hugo) or social media
-  > this never happened
+  > This never happened.
 - Be very selfish with your time
-  > hard to quantify
+  > Hard to quantify.
 - Bet on yourself
-  > ditto selfish
+  > Ditto selfish.
 - Connect with deep learning researchers and engineers via X
-  > yes at the beginning of the year, then I lost interest in X
+  > Yes at the beginning of the year, then I lost interest in X.
 - Run marathons, even ultra-marathons
   > I did both. I ran the Helsinki Marathon officially and also did a 50km ultra marathon.
 - Integrate GPT into language maintenance and flashcards
-  > yes to GPT, flashcards no
+  > Yes to GPT, flashcards no.
 - Record your learnings every day on RemNote
-  > I succeeded in saving them daily but not in practicing them
+  > I succeeded in saving them daily but not in practicing them.
 - Be more honest with myself and with others
-  > hard to quantify, need to re-frame these goals for next year to be quantifiable
+  > Hard to quantify, need to re-frame these goals for next year to be quantifiable.
 - **Summer goals:**
-  - get accepted to residency/FR8
-    > yes
-  - get accepted to the MATS program
-    > no (thankfully)
+  - Get accepted to residency/FR8
+    > Yes.
+  - Get accepted to the MATS program
+    > No (thankfully).
 - **Ultimate goals:**
-  - move to SF with a job in AI at SSI Inc or YC
-    > was not realized
-  - appear on the Dwarkesh podcast
-    > this was naive, but I will still remain as unrealistically ambitious
+  - Move to SF with a job in AI at SSI Inc or YC
+    > Was not realized.
+  - Appear on the Dwarkesh podcast
+    > This was naive, but I will still remain as unrealistically ambitious.
 
 Hits
 - Started this blog with weekly victories, which are a compelling way to track progress and also focus on the wins
@@ -105,7 +115,7 @@ Misses
 
 Side Quests
 - Made a maximum low-effort schedule for the last sem of university which let me focus on outside projects
-- Lots of software sidequests e.g. twtr cli
+- Fun software projects e.g. twtr cli
 
 Thoughts
 - I want to do some pretty insane trips over 2026, I saw this guy on Strava do the entire northwest of France, 80 kilometers a day, and that seems pretty compelling to me
@@ -126,8 +136,7 @@ If one area of your life stayed stagnant all year, which would be most dangerous
 - Not doing everything in my power to find something which I can obsess over
 
 Do you want 2026 to optimize more for optionality or commitment?
-- If I find something to obsess over, then I want to optimize for commitment, but if not, then I want to optimize for optionality because I have always wanted to travel the world and see places
-
+- If I find something to obsess over, then I optimize for commitment, if not, I optimize for optionality by travelling the world
 
 Next year will be the biggest so far!
 
