weekly vic microddp

--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -2,7 +2,7 @@
 layout: post
 title: SF
 date: 2026-01-19
-categories: 
+categories: travel
 ---
 
 I have been in SF since January 13th; here are my observations:
