--- a/_posts/blog/2026-02-03-grant.md
+++ b/_posts/blog/2026-02-03-grant.md
@@ -2,7 +2,7 @@
 layout: post
 title: Grant
 date: 2026-02-03
-categories: 
+categories: finance
 ---
 
 I did my first ever [grant](https://www.lesswrong.com/posts/FsqFzFCaxuBS7T5A9/kredit-grant) last month for ~5.7k in llm credits and here are two lessons I learnt:
@@ -13,4 +13,6 @@ I did my first ever [grant](https://www.lesswrong.com/posts/FsqFzFCaxuBS7T5A9/kr
 
 - The summary here is that you need to consider both the application phase and the awarding phase, I did not consider the latter, and I believe other first-time granters may run into this issue.
 
-- I also gave the grant criteria and the applications to Gemini to pick the winners, which I believe is less biased than me choosing, but I also feel that it's not fair that I didn't read each application.
+- I gave the grant criteria and applications to Gemini to pick the winners, which I believe is less biased than me choosing, but I also feel that it's not fair that I didn't read each application.
+
+- One thing I am happy with is that I intentionally made the application short with just one option to select the llm provider and then a 2-3 sentence response, so as to minimally consume the time of applicants.
