--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -31,3 +31,11 @@ I have been in SF since January 13th; here are my observations:
 6. As I was told by Teddy from Founders Embassy, discernment is key; there is a massive offering of events, meetups, etc., but discernment is knowing what's worth it and what isn't.
 
 Sam asked me last night at midnight in the Mission Dolores park what I have learnt so far while in SF, spurring me to write this.
+
+---
+
+SF vocab:
+
+- jaded
+- spiky
+- T
