finished blog post

--- a/_posts/blog/2026-02-10-regex.md
+++ b/_posts/blog/2026-02-10-regex.md
@@ -11,10 +11,10 @@ Inspired by [Nicholas Carlini's C compiler agent team experiment](https://www.an
 
 I tasked two Opus 4.6 agents to build a regex engine, and then walked away, here is the [repo](https://github.com/kiankyars/regex).
 
-Over ~1,300 Claude Code sessions (with ~1,260 rate‑limited), the agent team wrote ~1700 lines of code, and now I have a working rust regex engine:
+Over 14 Claude Code sessions, the agent team wrote ~1700 lines of code, and now I have a working rust regex engine:
 
 ```bash
-kian@Kian regex %   cargo run -- "a+b*" "xxaaabbbzz"                                                                                             
+kian@Kian regex %   cargo run -- "a+b*" "xxaaabbbzz"
    Compiling regex-engine v0.1.0 (/Users/kian/Developer/regex)
     Finished `dev` profile [unoptimized + debuginfo] target(s) in 1.06s
      Running `target/debug/regex-engine 'a+b*' xxaaabbbzz`
@@ -23,16 +23,17 @@ MATCH:aaabbb
 
 ## Setup
 
-This expirement required two seperate pieces:
+This expirement required three seperate pieces:
 
-1. A remote which the agents could commit two and build their work
+1. A remote which the agents could push to and build their work
 
 2. A server for running the agents with a cloned remote (the original expirement uses docker containers, I do not)
 
 3. A third directory called server-stuff which hosts the files which the original c compiler post does not provide, namely:
- - AGENT_PROMPT.md
- - launch_agents.sh
- - agent_loop.sh
+
+- AGENT_PROMPT.md
+- launch_agents.sh
+- agent_loop.sh
 
 The main contribution of this blog post is providing the above harnessing
 
@@ -63,6 +64,24 @@ Coordination primitives in the repo:
 - `notes/` for handoffs and caveats
 - `PROGRESS.md` for shared status updates
 
+## Replication
+
+If you would like to replicate these results, it suffices to:
+
+```bash
+git clone git@github.com:kiankyars/regex.git
+mv regex/server-stuff .
+chmod 700 server-stuff/launch_agents.sh server-stuff/agent_loop.sh
+git checkout -f c592a0534e60db71795863a8e64598f3779afc86
+./server-stuff/launch_agents.sh 2
+```
+
+The above assumes you have a claude code cli client installed on your machine along with screen and a few other standard linux packages.
+
+## Future Work
+
+Today I am going to be building sqlite from scratch, but this time I'm going to be using both Codex and Claude on the same project to see how heterogeneous agents interact with each other.
+
 ## Appendix
 
 ### Code size
@@ -84,3 +103,7 @@ Coordination primitives in the repo:
 ### Model usage snapshot
 
 - Tokens: In 9.4k / Out 6.5k
+
+### Notes on the Anthropic approach
+
+- This is the inital [commit](https://github.com/anthropics/claudes-c-compiler/commit/d8cbbec87e0607e6c6aedd601b1ea9afba3c4e7b) on the anthropic repo, and this is the first [page](https://github.com/anthropics/claudes-c-compiler/commits/main/?after=6f1b99acb2f4ec2414592136c2009fe7713deec3+3960) of commits for helpful context.
