--- a/_posts/blog/2026-02-10-regex.md
+++ b/_posts/blog/2026-02-10-regex.md
@@ -29,13 +29,13 @@ This expirement required three seperate pieces:
 
 2. A server for running the agents with a cloned remote (the original expirement uses docker containers, I do not)
 
-3. A third directory called server-stuff which hosts the files which the original c compiler post does not provide, namely:
+3. A third directory called [server-stuff](https://github.com/kiankyars/regex/tree/main/server-stuff) which hosts the files note provided by the original author, namely:
 
 - AGENT_PROMPT.md
 - launch_agents.sh
 - agent_loop.sh
 
-The main contribution of this blog post is providing the above harnessing
+My main contribution is providing the above harnessing.
 
 ## Workflow
 
@@ -80,7 +80,7 @@ The above assumes you have a claude code cli client installed on your machine al
 
 ## Future Work
 
-Today I am going to be building sqlite from scratch, but this time I'm going to be using both Codex and Claude on the same project to see how heterogeneous agents interact with each other.
+Today I am building sqlite from scratch, but this time I'm going to be using both Codex and Claude on the same project to see how heterogeneous agents interact with each other.
 
 ## Appendix
 
@@ -103,7 +103,8 @@ Today I am going to be building sqlite from scratch, but this time I'm going to 
 ### Model usage snapshot
 
 - Tokens: In 9.4k / Out 6.5k
+- Used ~30% of my claude pro weekly limit
 
 ### Notes on the Anthropic approach
 
-- This is the inital [commit](https://github.com/anthropics/claudes-c-compiler/commit/d8cbbec87e0607e6c6aedd601b1ea9afba3c4e7b) on the anthropic repo, and this is the first [page](https://github.com/anthropics/claudes-c-compiler/commits/main/?after=6f1b99acb2f4ec2414592136c2009fe7713deec3+3960) of commits for helpful context.
+- For context, this is the inital [commit](https://github.com/anthropics/claudes-c-compiler/commit/d8cbbec87e0607e6c6aedd601b1ea9afba3c4e7b) on the anthropic repo, and this is the first [page](https://github.com/anthropics/claudes-c-compiler/commits/main/?after=6f1b99acb2f4ec2414592136c2009fe7713deec3+3960) of commits.
