codex 5.3 has proof-read

--- a/_posts/blog/2026-02-10-regex.md
+++ b/_posts/blog/2026-02-10-regex.md
@@ -7,11 +7,11 @@ categories: machine_learning
 
 Inspired by [Nicholas Carlini's C compiler agent team experiment](https://www.anthropic.com/engineering/building-c-compiler).
 
-## TLDR:
+## TL;DR
 
-I tasked two Opus 4.6 agents to build a regex engine, and then walked away, here is the [repo](https://github.com/kiankyars/regex).
+I tasked two Opus 4.6 agents to build a regex engine, then walked away. Here is the [repo](https://github.com/kiankyars/regex).
 
-Over 14 Claude Code sessions, the agent team wrote ~1700 lines of code, and now I have a working rust regex engine:
+Over 14 Claude Code sessions, the agent team wrote ~1700 lines of code, and now I have a working Rust regex engine:
 
 ```bash
 kian@Kian regex %   cargo run -- "a+b*" "xxaaabbbzz"
@@ -23,13 +23,13 @@ MATCH:aaabbb
 
 ## Setup
 
-This expirement required three seperate pieces:
+This experiment required three separate pieces:
 
 1. A remote which the agents could push to and build their work
 
-2. A server for running the agents with a cloned remote (the original expirement uses docker containers, I do not)
+2. A server for running the agents with a cloned remote (the original experiment uses Docker containers; I do not)
 
-3. A third directory called [server-stuff](https://github.com/kiankyars/regex/tree/main/server-stuff) which hosts the files note provided by the original author, namely:
+3. A third directory called [server-stuff](https://github.com/kiankyars/regex/tree/main/server-stuff) that hosts files not provided by the original post, namely:
 
 - AGENT_PROMPT.md
 - launch_agents.sh
@@ -64,6 +64,32 @@ Coordination primitives in the repo:
 - `notes/` for handoffs and caveats
 - `PROGRESS.md` for shared status updates
 
+## Analysis
+
+### Where the real work happened
+
+The implementation progress came from a small number of successful sessions:
+
+- bootstrap to 37/38 tests
+- harness fix and edge tests to 54/54
+- optimization and robustness to 69/69
+- hardening and expanded coverage to 159/159
+
+### Session count is not commit count
+
+- some sessions produced lock-only commits
+- some sessions produced multiple commits
+- some sessions produced no commit
+
+### Coordination
+
+- The lock-file mechanism using `current_tasks/` was generally effective, but there were a few cases where [stale](https://github.com/kiankyars/regex/commit/f2a3da76bd10fde16744a39c3ed95eb06ab88c51) locks required cleanup.
+
+### Two things that helped Opus
+
+- using oracle-based testing against the Python `re` library
+- preserving modular boundaries (parser → abstract syntax tree → compiler → virtual machine)
+
 ## Replication
 
 If you would like to replicate these results, it suffices to:
@@ -76,11 +102,17 @@ git checkout -f c592a0534e60db71795863a8e64598f3779afc86
 ./server-stuff/launch_agents.sh 2
 ```
 
-The above assumes you have a claude code cli client installed on your machine along with screen and a few other standard linux packages.
+The above assumes you have the Claude Code CLI installed on your machine, along with `screen` and a few other standard Linux packages.
 
 ## Future Work
 
-Today I am building sqlite from scratch, but this time I'm going to be using both Codex and Claude on the same project to see how heterogeneous agents interact with each other.
+Today I am building SQLite from scratch, but this time I'm going to use both Codex and Claude on the same project to see how heterogeneous agents interact with each other. I'm thinking of a lock TTL (time to live) and automatic stale-lock cleanup to prevent agents from being blocked by abandoned lock files in `current_tasks/`.
+
+### Multi-agent
+
+I'm thinking of having specialized agent roles as well. Here is what Carlini did:
+
+> I tasked one agent with coalescing any duplicate code it found. I put another in charge of improving the performance of the compiler itself, and a third I made responsible for outputting efficient compiled code. I asked another agent to critique the design of the project from the perspective of a Rust developer, and make structural changes to the project to improve the overall code quality, and another to work on documentation.
 
 ## Appendix
 
@@ -103,8 +135,8 @@ Today I am building sqlite from scratch, but this time I'm going to be using bot
 ### Model usage snapshot
 
 - Tokens: In 9.4k / Out 6.5k
-- Used ~30% of my claude pro weekly limit
+- Used ~30% of my Claude Pro weekly limit
 
 ### Notes on the Anthropic approach
 
-- For context, this is the inital [commit](https://github.com/anthropics/claudes-c-compiler/commit/d8cbbec87e0607e6c6aedd601b1ea9afba3c4e7b) on the anthropic repo, and this is the first [page](https://github.com/anthropics/claudes-c-compiler/commits/main/?after=6f1b99acb2f4ec2414592136c2009fe7713deec3+3960) of commits.
+- For context, this is the initial [commit](https://github.com/anthropics/claudes-c-compiler/commit/d8cbbec87e0607e6c6aedd601b1ea9afba3c4e7b) on the Anthropic repo, and this is the first [page](https://github.com/anthropics/claudes-c-compiler/commits/main/?after=6f1b99acb2f4ec2414592136c2009fe7713deec3+3960) of commits.
