--- a/_posts/blog/2026-02-10-regex.md
+++ b/_posts/blog/2026-02-10-regex.md
@@ -140,3 +140,17 @@ I'm thinking of having specialized agent roles as well. Here is what Carlini did
 ### Notes on the Anthropic approach
 
 - For context, this is the initial [commit](https://github.com/anthropics/claudes-c-compiler/commit/d8cbbec87e0607e6c6aedd601b1ea9afba3c4e7b) on the Anthropic repo, and this is the first [page](https://github.com/anthropics/claudes-c-compiler/commits/main/?after=6f1b99acb2f4ec2414592136c2009fe7713deec3+3960) of commits.
+
+## Citation
+
+```bibtex
+@misc{kyars2026regex,
+  author = {Kian Kyars},
+  title = {Building a Regex Engine with a team of parallel Claudes},
+  year = {2026},
+  month = feb,
+  day = {10},
+  howpublished = {\url{https://kiankyars.github.io/machine_learning/2026/02/10/regex.html}},
+  note = {Blog post}
+}
+```
