update blog post with better information

--- a/_posts/blog/2026-02-10-regex.md
+++ b/_posts/blog/2026-02-10-regex.md
@@ -27,36 +27,25 @@ This experiment required three separate pieces:
 
 1. A remote which the agents could push to and build their work
 
-2. A server for running the agents with a cloned remote (the original experiment uses Docker containers; I do not)
+2. A server for running the agents on the cloned remote (the original experiment uses Docker containers; I do not)
 
-3. A third directory called [server-stuff](https://github.com/kiankyars/regex/tree/main/server-stuff) that hosts files not provided by the original post, namely:
+3. A third directory (which is my main contribution) called [regex](https://github.com/kiankyars/parallel-ralph/tree/main/regex) that with the harnessing not provided by the original post, namely:
 
 - AGENT_PROMPT.md
 - launch_agents.sh
 - agent_loop.sh
 
-My main contribution is providing the above harnessing.
-
 ## Workflow
 
-I ran two agents in parallel with `screen` and a simple loop script.
-
-1. Keep `regex/` and `server-stuff/` as sibling directories.
-2. Set `REPO` in `agent_loop.sh` to the local regex path.
-3. Set `PROMPT_PATH` in `agent_loop.sh` to `server-stuff/AGENT_PROMPT.md`.
-4. Launch with:
-
-```bash
-./server-stuff/launch_agents.sh 2
-```
+I ran two agents in parallel with a loop script.
 
 Each agent loop does:
 
-1. Clone the repo into `workspace-<agent_id>` next to `regex/`.
+1. Clone the repo into `workspace-<agent_id>` if not already.
 2. `git pull --rebase origin main`.
-3. Run Claude with the shared prompt.
+3. Run Claude on yolo mode with the [shared prompt](https://github.com/kiankyars/parallel-ralph/blob/main/regex/AGENT_PROMPT.md).
 4. Append session output to per-agent log files.
-5. Sleep briefly and repeat forever.
+5. Sleep briefly and repeat.
 
 Coordination primitives in the repo:
 
@@ -85,7 +74,7 @@ The implementation progress came from a small number of successful sessions:
 
 - The lock-file mechanism using `current_tasks/` was generally effective, but there were a few cases where [stale](https://github.com/kiankyars/regex/commit/f2a3da76bd10fde16744a39c3ed95eb06ab88c51) locks required cleanup.
 
-### Two things that helped Opus
+### Two things that helped
 
 - using oracle-based testing against the Python `re` library
 - preserving modular boundaries (parser → abstract syntax tree → compiler → virtual machine)
@@ -95,18 +84,18 @@ The implementation progress came from a small number of successful sessions:
 If you would like to replicate these results, it suffices to:
 
 ```bash
-git clone git@github.com:kiankyars/regex.git
-mv regex/server-stuff .
-chmod 700 server-stuff/launch_agents.sh server-stuff/agent_loop.sh
-git checkout -f c592a0534e60db71795863a8e64598f3779afc86
-./server-stuff/launch_agents.sh 2
+git clone git@github.com:kiankyars/parallel-ralph.git
+mv parallel-ralph/regex .
+# rm -rf parallel-ralph
+chmod 700 regex/*.sh
+./regex/launch_agents.sh 2
 ```
 
 The above assumes you have the Claude Code CLI installed on your machine, along with `screen` and a few other standard Linux packages.
 
 ## Future Work
 
-Today I am building SQLite from scratch, but this time I'm going to use both Codex and Claude on the same project to see how heterogeneous agents interact with each other. I'm thinking of a lock TTL (time to live) and automatic stale-lock cleanup to prevent agents from being blocked by abandoned lock files in `current_tasks/`.
+Today I am building SQLite from scratch, but this time I'm going to use both Codex and Claude on the same project to see how heterogeneous agents interact with each other. I considered using a lock TTL (time to live) and automatic stale-lock cleanup to prevent agents from being blocked by abandoned lock files.
 
 ### Multi-agent
 
