Update experience with my goals as well as SF with a few more insights, change my update, sorry, update my about and now page, and also add a few images folders.

--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -34,8 +34,25 @@ Sam asked me last night at midnight in the Mission Dolores park what I have lear
 
 ---
 
-SF vocab:
+It is Feb 11, 2026 at 20:39 and it has now been four weeks, here are the new insights I have since gained:
+
+7. The highs are insane (I've only had one low so far).
+
+8. You casually meet people that have changed the world.
+
+9. You *truly* develop the belief that the laws of physics are the only limit.
+
+10. You can meet anyone you want.
+
+11. Most people are very low-ego.
+
+12. It is serendipitous e.g. I won a hackathon which led to an accelerator offer.
+
+---
+
+SF vocab I have learnt so far:
 
 - jaded
 - spiky
+- schizo
 - T
