--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -40,7 +40,7 @@ It is Feb 11, 2026 at 20:39 and it has now been four weeks, here are the new ins
 
 8. You casually meet people that have changed the world.
 
-9. You *truly* develop the belief that the laws of physics are the only limit.
+9. You _truly_ develop the belief that the laws of physics are the only limit.
 
 10. You can meet anyone you want.
 
