Update SF and biomaxing and add this week's Vicky Victory

--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -48,6 +48,8 @@ It is Feb 11, 2026 at 20:39 and it has now been four weeks, here are the new ins
 
 12. It is serendipitous e.g. I won a hackathon which led to an accelerator offer.
 
+13. Where I lived before, people always ask and think about the weather i.e. they know what the forecast is for the next week. Here, nobody talks about the weather because it's always good. So it doesn't matter.
+
 ---
 
 SF vocab I have learnt so far:
